Commit 19 - Fixed Layout issue!
Finally. It looks good in all the viewport sizes. (320px-1024px). Just
need to complete the functionality of the local storage, the cancel
button at the bottom, fix the notification bell at the top to be in the
correct position at tablet and desktop view while also having
functionality and this project should be finished!

--- a/css/application.css
+++ b/css/application.css
@@ -511,11 +511,14 @@ div.twitter-icon, div.facebook-icon, div.google-plus-icon {
     width: 1000px; } }
 
 /************************** MESSAGE USER / SETTINGS SECTION**************************/
-#message-user-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  flex-wrap: nowrap; }
+@media (min-width: 768px) {
+  #message-settings-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    height: 500px;
+    width: 90%; } }
 
 @media (min-width: 768px) {
   .message-user-wrapper {
@@ -553,23 +556,26 @@ textarea {
 
 .send-button {
   width: 90%;
-  background-color: rgba(167, 219, 216, 0.5);
+  background-color: rgba(243, 134, 48, 0.5);
   color: grey;
-  border-radius: 4px;
   border-style: none;
   height: 3em;
   transition: .5s ease;
   font-weight: 200;
   letter-spacing: 3px;
   font-family: "Raleway", sans-serif;
-  border: 1px solid #69d2e7;
-  margin-bottom: 2em;
-  outline: none; }
+  margin: 3.5em 0 2em;
+  outline: none;
+  border-radius: 5px; }
+  @media (min-width: 1024px) {
+    .send-button {
+      margin-top: 1.5em; } }
 
 .send-button:hover {
-  background-color: rgba(243, 134, 48, 0.5);
-  transform: scale(1.05);
-  cursor: pointer; }
+  background-color: #fa6900;
+  transform: scale(1.1);
+  cursor: pointer;
+  color: white; }
 
 .select-menu {
   background-color: rgba(167, 219, 216, 0.5);
@@ -579,6 +585,9 @@ textarea {
   font-family: "Raleway", sans-serif;
   letter-spacing: 1px;
   border-style: none; }
+  @media (min-width: 768px) {
+    .select-menu {
+      margin-top: 3em; } }
 
 .save-cancel-button {
   padding: 1em 3em;
@@ -588,7 +597,8 @@ textarea {
   border-style: none;
   letter-spacing: 2px;
   transition: .5s;
-  font-weight: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-weight: 200;
   border-radius: 5px; }
 
 .save-cancel-button:hover {
